# shorten.rs

./: Cargo.toml  docker-compose.yml
.github/workflows/: backend.yml  ci.yml  frontend.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-entrypoint.sh
backend/migrations/: 20260604000000_shortened_url_expire_at.sql  20260604114927_users_table.sql
backend/src/: controller.rs  dtos.rs  lib.rs  main.rs
backend/src/extractors/: authenticated_user.rs
backend/src/services/: authentication.rs  mod.rs  url_shortener.rs  users.rs
backend/tests/: authenticated_user.rs  db_setup.rs  expiration.rs  http.rs  service.rs
backend/tests/common/: mod.rs
frontend/: .cta.json  .dockerignore  .prettierrc  Dockerfile  README.md  index.html  package.json  req.browser  req.curl
frontend/src/: App.tsx  main.tsx  queries.ts
migrations/: 20260529123259_shortened_urls.sql  20260529213141_shortened_url_visits.sql
src/: controller.rs  lib.rs  main.rs
src/services/: url_shortener.rs
tests/: http.rs  service.rs
tests/common/: mod.rs
