[package]
name = "shorten-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
actix-web-validator = "7.0.0"
rand = "0.10.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = "0.9.0"
validator = { version = "0.20.0", features = ["derive"] }
