[package]
name = "shorten-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
actix-web-validator = "7.0.0"
anyhow = "1.0.102"
rand = "0.10.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [
  "macros",
  "migrate",
  "runtime-tokio",
  "sqlite",
  "tls-native-tls",
] }
validator = { version = "0.20.0", features = ["derive"] }
