[package]
name = "shorten-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
actix-web-validator = "7.0.0"
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["rand", "simple", "password-hash", "std"] }
dotenv = "0.15.0"
getrandom = { version = "0.4.2", features = ["std", "sys_rng"] }
rand = "0.10.1"
rand_core = "0.6.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [
  "macros",
  "migrate",
  "runtime-tokio",
  "sqlite",
  "tls-native-tls",
] }
validator = { version = "0.20.0", features = ["derive"] }
